:bug: fix u-grid-layout-row overflow hidden

--- a/src/u-grid-layout-row.vue/module.css
+++ b/src/u-grid-layout-row.vue/module.css
@@ -1,8 +1,13 @@
 .root {
     composes: row from '../u-grid-layout.vue/module.css';
-    overflow: hidden;
 }
-
+.root:after, .root:before {
+    display: block;
+    content: ".";
+    clear: both;
+    height: 0;
+    visibility: hidden;
+}
 .root[type="flex"] { display: flex; }
 
 .root[justify="start"] { justify-content: flex-start; }
